@@ -4,6 +4,7 @@ class TestResource extends Test {
 
 	static var STR = "Héllo World !";
 
+	#if !as3
 	function testResources() {
 		var names = haxe.Resource.listNames();
 		eq( names.length, 2 );
@@ -30,6 +31,7 @@ class TestResource extends Test {
 		for( i in 0...lasts.length )
 			eq( b.get(b.length - lasts.length + i), lasts[i] );
 	}
+	#end
 
 	#if neko
 	static function main() {
