@@ -19,7 +19,7 @@
 #-as3 as3
 #-cp ..
 #-main unit.Test
-#-cmd mxmlc -output unit9_as3.swf as3/__main__.as
+#-cmd mxmlc -default-size 800 600 -debug -output unit9_as3.swf as3/__main__.as
 
 --next
 # JS
